@@ -2,5 +2,5 @@ AUX teapot-2.2.0-doc-dir.patch 1226 RMD160 681bbd03502b78560961509921468525f8657
 AUX teapot-2.2.0-helpfile.patch 852 RMD160 82db55f25ebf478e61057f77dd3dbf1e7f4ffb7c SHA1 cf265b2d569c7e3470d13433dd492ed6ec7db0cc SHA256 5ee1e58c5daea001dc563d7be94327eb9842a3a87f4de923e82e02a7ea4d6c0e
 DIST teapot-2.2.0.tar.gz 113903 RMD160 c4ca594d872193433bb6b4704bc84e4bb698f649 SHA1 96958caed1379336386cfd8d3878ffbc2d1684e7 SHA256 883c6298002e0f4f27abeeb08f1c0282ae69de8f5b70619437b46ad92bb70916
 EBUILD teapot-2.2.0.ebuild 1151 RMD160 eac74f3367c96acd0e51f101d9a016bd8b59a3b4 SHA1 31b40da5d626b8b8075ea17f6e3179511a70168d SHA256 70209adc6e8e4acdb91f11f5582c5dde19cb69b7413933a206e6f352e194b2fc
-MISC ChangeLog 437 RMD160 14a12c493bd5823e2efc598ba136fe4b0875f25a SHA1 72044499838313871000346bb05d70259c6142eb SHA256 ff67c2a10f8d7564075a476b881c2ba428fa77c75677899e5b80b03d5989ac61
-MISC metadata.xml 481 RMD160 ec9bb170951e74a4cf1378044159b82eb4397cec SHA1 a83429ce3dbde6fa9c3e781b3e37ac14abb57970 SHA256 07e19283901eec66c9a01d2c8d5164bf029740e5b72456d0edf8727812bb0133
+MISC ChangeLog 560 RMD160 925cab5b58259984658f935f1505950d77d6f98a SHA1 d2c9099c508262ad2d9ce1ade817c8686444b3ff SHA256 82998dcd68d53059c5803f242e960f14e3aedb80d0ef26fcd38a4f9ff55e0458
+MISC metadata.xml 268 RMD160 7cc32afbc1bee2b7a5e860a90631576f46014b08 SHA1 ba3110cc099c2f967ef65f7d8c3e9c6312d3d556 SHA256 5e85b5c61d8b4482d2fd75897e6332d93750b094c15bd19c171fe55ffe6558a1
