@@ -3,15 +3,7 @@
 <pkgmetadata>
   <herd>desktop-misc</herd>
   <maintainer>
-    <email>signals42@gmail.com</email>
+    <email>signals@gentoo.org</email>
     <name>Kevin McCarthy</name>
-  </maintainer>
-  <maintainer>
-    <email>ssuominen@gentoo.org</email>
-    <name>Samuli Suominen</name>
-  </maintainer>
-  <maintainer>
-    <email>flameeyes@gentoo.org</email>
-    <name>Diego Elio Pettenò</name>
   </maintainer>
 </pkgmetadata>
